# cmake-library

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/MyLib/: library.cpp
